<resources>
    <string name="app_name">IntegraSalud</string>
    <string name="nuevoUsuario">¿Eres nuevo? Regístrate</string>
    <string name="bienvenidoLabel">¡Bienvenido a Integra!</string>
    <string name="continuarLabel">Inicia sesión para continuar</string>
    <string name="emailEditText">Email</string>
    <string name="logo">Integra</string>
    <string name="inicio">Inicio</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena2">Confirmar Contraseña</string>
    <string name="registro">Regístrate para empezar a usar Integra</string>
    <string name="registrar">Registrar</string>
    <string name="cuenta">¿Ya tienes una cuenta? Inicia Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="logout">Logout</string>
    <string name="by">By</string>
    <string name="integra">Integra</string>
    <string name="edad">Edad</string>
    <string name="clinica">Clinica</string>
    <string name="agregar">Agregar</string>
    <string name="actualizar">Actualizar</string>
    <string name="mostrar">Mostrar</string>
    <string name="eliminar">Eliminar</string>
    <string name="id">ID del Paciente</string>
    <string name="bienvenido">Salud Integra</string>
    <string name="recordatorio">Recuerde registrar su oxigenación</string>
    <string name="cantidad">Usted ha bebido (ml):</string>
    <string name="aceptar">Registrar Agua</string>
    <string name="logo1">Logo</string>
    <string name="lista_de_actividades">Lista de Actividades</string>
    <string name="agua">Agua</string>
    <string name="pasos">Pasos</string>
    <string name="distancia">Distancia</string>
    <string name="id_paciente">ID Paciente</string>
    <string name="ritmo_cardiaco">Ritmo Cardiaco</string>
    <string name="calor_as">Calorías</string>
    <string name="oxigenacion">Oxigenación</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
</resources>